fixed/App.Client Home and User Controller fixed.

--- a/App.Client/Views/Home/BlogPost.cshtml
+++ b/App.Client/Views/Home/BlogPost.cshtml
@@ -35,7 +35,7 @@
                                 </div>
                                 <div class="comment-body">
                                     <h3>@comment.Author</h3>
-                                    <div class="meta">@comment.CreatedAt.ToString("MMMM dd, yyyy 'at' h:mmtt")</div>
+                                    <div class="meta">@comment.CreatedAt.ToString("dd,MM,yyyy")</div>
                                     <p>@comment.Content</p>
                                 </div>
                             </li>
@@ -62,20 +62,28 @@
             <div class="col-lg-4 sidebar ftco-animate">
                 <div class="sidebar-box ftco-animate">
                     <h3 class="heading-sidebar">Recent Blog</h3>
-                    @foreach (var blog in Model.RecentBlogs)
+                    @if (Model.RecentBlogs != null)
                     {
-                        <div class="block-21 mb-4 d-flex">
-                            <a class="blog-img mr-4" style="background-image: url(@blog.ImageUrl);"></a>
-                            <div class="text">
-                                <h3 class="heading"><a href="@Url.Action("BlogPost", new { postId = blog.Id })">@blog.Title</a></h3>
-                                <div class="meta">
-                                    <div><a href="#"><span class="icon-calendar"></span> @blog.CreatedAt.ToString("MMMM dd, yyyy")</a></div>
-                                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                                    <div><a href="#"><span class="icon-chat"></span> @blog.Comments.Count</a></div>
+                        @foreach (var blog in Model.RecentBlogs)
+                        {
+                            <div class="block-21 mb-4 d-flex">
+                                <a class="blog-img mr-4" style="background-image: url(@blog.ImageUrl);"></a>
+                                <div class="text">
+                                    <h3 class="heading"><a href="@Url.Action("BlogPost", new { postId = blog.Id })">@blog.Title</a></h3>
+                                    <div class="meta">
+                                        <div><a href="#"><span class="icon-calendar"></span> @blog.CreatedAt.ToString("dd,MM,yyyy")</a></div>
+                                        <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+                                        <div><a href="#"><span class="icon-chat"></span> @(blog.Comments?.Count ?? 0)</a></div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        }
                     }
+                    else
+                    {
+                        <p>No recent blogs available.</p>
+                    }
+                    
                 </div>
             </div>
         </div>
