--- a/App.Client/Views/Shared/Partials/_Head.cshtml
+++ b/App.Client/Views/Shared/Partials/_Head.cshtml
@@ -1,4 +1,4 @@
-﻿<title>Clark - Free Bootstrap 4 Template by Colorlib</title>
+﻿<title>@ViewBag.PersonalInfo.FirstName @ViewBag.PersonalInfo.LastName Portfolyo</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
