--- a/App.Admin/Views/Comment/Comments.cshtml
+++ b/App.Admin/Views/Comment/Comments.cshtml
@@ -32,9 +32,9 @@
                 {
                     <tr>
                         <td>
-                            @if (!string.IsNullOrEmpty(comment.UserImage))
+                            @if (!string.IsNullOrEmpty(comment.UserImageUrl))
                             {
-                                <img src="@comment.UserImage" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
+                                <img src="@comment.UserImageUrl" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
                             }
                             else
                             {
@@ -71,9 +71,9 @@
                 {
                     <tr>
                         <td>
-                            @if (!string.IsNullOrEmpty(comment.UserImage))
+                            @if (!string.IsNullOrEmpty(comment.UserImageUrl))
                             {
-                                <img src="@comment.UserImage" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
+                                <img src="@comment.UserImageUrl" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
                             }
                             else
                             {
