--- a/App.Admin/Views/Comment/PostComment.cshtml
+++ b/App.Admin/Views/Comment/PostComment.cshtml
@@ -23,7 +23,7 @@
                     <div class="card mb-3">
                         <div class="card-body d-flex">
                             <div class="user-image me-3">
-                                <img src="@(string.IsNullOrEmpty(comment.UserImage) ? Url.Content("~/image/user-anon.png") : comment.UserImage)"
+                                <img src="@(string.IsNullOrEmpty(comment.UserImageUrl) ? Url.Content("~/image/user-anon.png") : comment.UserImageUrl)"
                                      alt="User Photo"
                                      class="rounded-circle"
                                      style="width: 50px; height: 50px;" />
@@ -45,7 +45,7 @@
                     <div class="card mb-3">
                         <div class="card-body d-flex">
                             <div class="user-image me-3">
-                                <img src="@(string.IsNullOrEmpty(comment.UserImage) ? Url.Content("~/image/user-anon.png") : comment.UserImage)"
+                                <img src="@(string.IsNullOrEmpty(comment.UserImageUrl) ? Url.Content("~/image/user-anon.png") : comment.UserImageUrl)"
                                      alt="User Photo"
                                      class="rounded-circle"
                                      style="width: 50px; height: 50px;" />
