--- a/App.Admin/Views/User/Users.cshtml
+++ b/App.Admin/Views/User/Users.cshtml
@@ -32,9 +32,9 @@
                         <td>@user.UserName</td>
                         <td>@user.Email</td>
                         <td>
-                            @if (!string.IsNullOrEmpty(user.ProfilePhoto))
+                            @if (!string.IsNullOrEmpty(user.ProfilePhotoUrl))
                             {
-                                <img src="@user.ProfilePhoto" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
+                                <img src="@user.ProfilePhotoUrl" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
                             }else{
                                 <img src="~/image/user-anon.png" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
                             }
@@ -67,9 +67,9 @@
                         <td>@user.UserName</td>
                         <td>@user.Email</td>
                         <td>
-                            @if (!string.IsNullOrEmpty(user.ProfilePhoto))
+                            @if (!string.IsNullOrEmpty(user.ProfilePhotoUrl))
                             {
-                                <img src="@user.ProfilePhoto" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
+                                <img src="@user.ProfilePhotoUrl" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
                             } 
                             else
                             {
