--- a/App.Client/Views/Home/Index/_Contact.cshtml
+++ b/App.Client/Views/Home/Index/_Contact.cshtml
@@ -4,12 +4,12 @@
     <div class="row justify-content-center mb-5 pb-3">
         <div class="col-md-7 heading-section text-center ftco-animate">
             <h2 class="mb-4">Contact Us</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Please Contact Me!</p>
         </div>
     </div>
 
     <div class="row block-9">
-        <div class="col-md-6 order-md-last d-flex">
+        <div class="col-md-12 order-md-last d-flex">
             <form asp-action="SubmitContactMessage" method="post" class="bg-light p-5 contact-form">
                 <div class="form-group">
                     <label asp-for="Name"></label>
@@ -35,10 +35,6 @@
                     <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
                 </div>
             </form>
-        </div>
-
-        <div class="col-md-6 d-flex">
-            <div id="map" class="bg-white"></div>
         </div>
     </div>
 </div>
