--- a/App.Client/Views/User/Details.cshtml
+++ b/App.Client/Views/User/Details.cshtml
@@ -10,7 +10,7 @@
             <div class="col-md-6 text-center">
                 <h2>Profile</h2>
                 <div class="form-group">
-                    <img src="@Model.ProfilePhoto ?? https://freesvg.org/img/abstract-user-flat-4.png" alt="Profile Picture" class="img-thumbnail" style="width: 150px; height: 150px;">
+                    <img src="@Model.ProfilePhotoUrl ?? https://freesvg.org/img/abstract-user-flat-4.png" alt="Profile Picture" class="img-thumbnail" style="width: 150px; height: 150px;">
                 </div>
                 <div class="form-group">
                     <label>Email:</label>
@@ -20,7 +20,8 @@
                     <label>Username:</label>
                     <p>@Model.UserName</p>
                 </div>
-                <a asp-action="Edit" class="btn btn-primary">Edit Profile</a>
+                <a asp-action="Edit" class="btn btn-primary">Edit Profile</a> |
+                <a asp-action="Delete" asp-route-id="@Model.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
             </div>
         </div>
     </div>
