--- a/App.Client/Views/User/Edit.cshtml
+++ b/App.Client/Views/User/Edit.cshtml
@@ -9,10 +9,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <h2 class="text-center">Edit Profile</h2>
-                <div class="text-center mb-4">
-                    <img src="@Model.ProfilePhoto ?? "https://freesvg.org/img/abstract-user-flat-4.png"" alt="Profile Picture" class="img-thumbnail" style="width: 150px; height: 150px;">
-                </div>
-                <form asp-action="UploadProfilePhoto" method="post" enctype="multipart/form-data" class="mb-4">
+                <form asp-action="UploadProfilePhoto" method="post" class="mb-4">
                     <div class="form-group">
                         <label for="ProfilePicture">Change Profile Picture</label>
                         <input type="file" name="ProfilePicture" class="form-control-file" />
@@ -32,24 +29,11 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Save Changes</button>
                 </form>
-                <form asp-action="DeleteAccount" method="post" class="mt-3">
-                    <input type="hidden" asp-for="Id" value="@Model.Id" />
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="confirmDelete" />
-                        <label class="form-check-label" for="confirmDelete">Are you sure you want to delete your account?</label>
-                    </div>
-                    <button type="submit" class="btn btn-danger mt-2" id="deleteButton" disabled>Delete Account</button>
-                </form>
             </div>
         </div>
     </div>
 </section>
 
 @section Scripts {
-        <partial name="_ValidationScriptsPartial" />
-    <script>
-        document.getElementById('confirmDelete').addEventListener('change', function() {
-            document.getElementById('deleteButton').disabled = !this.checked;
-        });
-    </script>
+    <partial name="_ValidationScriptsPartial" />
 }
