Index view convert to ViewComponent.

--- a/App.Client/Views/Shared/Components/AboutMe/Default.cshtml
+++ b/App.Client/Views/Shared/Components/AboutMe/Default.cshtml
@@ -1,5 +1,4 @@
-﻿@using App.Shared.Dto.File
-@model PersonalInfoAboutMeViewModel
+﻿@model PersonalViewModel
 
 @{
     ViewData["Title"] = "About Me";
@@ -31,8 +30,7 @@
             </div>
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
                 <div class="text">
-                    <p><a asp-controller="File" asp-action="Download" asp-route-FileName="@Model.AboutMe.Cv" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
-
+                    <p><a asp-action="DownloadCv" asp-route-fileName="@Model.AboutMe.Cv" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
                 </div>
             </div>
         </div>
