--- a/App.Client/Views/Shared/Components/AboutMe/Hero.cshtml
+++ b/App.Client/Views/Shared/Components/AboutMe/Hero.cshtml
@@ -1,4 +1,4 @@
-﻿@model PersonalInfoAboutMeViewModel
+﻿@model PersonalViewModel
 
 <div class="home-slider  owl-carousel">
     <div class="slider-item ">
