--- a/App.Client/Views/Home/Index.cshtml
+++ b/App.Client/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 </section>
 
 <section class="ftco-section" id="blog-section">
-    <vc:blog-post />
+    <vc:blog-posts view-name="Main" />
 </section>
 
 <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
