--- a/App.Client/Views/Shared/Components/AboutMe/Default.cshtml
+++ b/App.Client/Views/Shared/Components/AboutMe/Default.cshtml
@@ -21,7 +21,7 @@
                     <p>@Model.AboutMe.Introduciton</p>
                     <ul class="about-info mt-4 px-md-0 px-2">
                         <li class="d-flex"><span>Name:</span> <span>@Model.PersonalInfo.FirstName @Model.PersonalInfo.FirstName</span></li>
-                        <li class="d-flex"><span>Date of birth:</span> <span>@Model.PersonalInfo.BirthDate</span></li>
+                        <li class="d-flex"><span>Date of birth:</span> <span>@Model.PersonalInfo.BirthDate.ToString("dd-MM-yyyy")</span></li>
                         <li class="d-flex"><span>Address:</span> <span>@Model.PersonalInfo.Address</span></li>
                         <li class="d-flex"><span>Email:</span> <span>@Model.PersonalInfo.Email</span></li>
                         <li class="d-flex"><span>Phone: </span> <span>@Model.PersonalInfo.PhoneNumber</span></li>
@@ -30,7 +30,7 @@
             </div>
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
                 <div class="text">
-                    <p><a asp-action="DownloadCv" asp-route-fileName="@Model.AboutMe.Cv" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
+                    <p><a asp-action="DownloadCv" asp-controller="Home" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
                 </div>
             </div>
         </div>
