--- a/App.Client/Views/Shared/Components/AboutMe/AboutMe.cshtml
+++ b/App.Client/Views/Shared/Components/AboutMe/AboutMe.cshtml
@@ -1,4 +1,4 @@
-﻿@model PersonalViewModel
+﻿@model PersonalDetailViewModel
 
 @{
     ViewData["Title"] = "About Me";
@@ -9,7 +9,7 @@
         <div class="col-md-6 col-lg-5 d-flex">
             <div class="img-about img d-flex align-items-stretch">
                 <div class="overlay"></div>
-                <div class="img d-flex align-self-stretch align-items-center" style="background-image: url(@Model.AboutMe.ImageUrl1)">
+                <div class="img d-flex align-self-stretch align-items-center" style="background-image:url('@Url.Action("GetImage", "Home", new { fileUrl = Model.AboutMe.ImageUrl2 })');">
                 </div>
             </div>
         </div>
@@ -36,3 +36,5 @@
         </div>
     </div>
 </div>
+
+
