--- a/App.Client/Views/Shared/Components/AboutMe/Hero.cshtml
+++ b/App.Client/Views/Shared/Components/AboutMe/Hero.cshtml
@@ -1,11 +1,11 @@
-﻿@model PersonalViewModel
+﻿@model PersonalDetailViewModel
 
 <div class="home-slider  owl-carousel">
     <div class="slider-item ">
         <div class="overlay"></div>
         <div class="container">
             <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-                <div class="one-third js-fullheight order-md-last img" style="background-image:url(../../../wwwroot/images/bg_1.png);">
+                <div class="one-third js-fullheight order-md-last img" style="background-image: url('@Url.Action("GetImage", "Home", new { fileUrl = Model.AboutMe.ImageUrl1 })')">
                     <div class="overlay"></div>
                 </div>
                 <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
