--- a/App.Client/Views/Home/BlogPost.cshtml
+++ b/App.Client/Views/Home/BlogPost.cshtml
@@ -6,7 +6,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
             <div class="col-md-12 ftco-animate pb-5 mb-3 text-center">
                 <h1 class="mb-3 bread">Blog Single Post</h1>
-                <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index">Home <i class="ion-ios-arrow-forward"></i></a></span>
+                <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index" asp-controller="Home">Home <i class="ion-ios-arrow-forward"></i></a></span>
             </div>
         </div>
     </div>
@@ -18,29 +18,33 @@
             <div class="col-lg-8 ftco-animate">
                 <h2 class="mb-3">@Model.Title</h2>
                 <p>
-                    <img src="@Model.ImageUrl" alt="" class="img-fluid">
+                    <img src="@Url.Action("GetImage", "Home", new { fileUrl = Model.ImageUrl })" alt="Blog Photo" class="img-fluid">
                 </p>
                 <p>@Model.Content</p>
                 <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
                 <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
 
                 <div class="pt-5 mt-5">
-                    <h3 class="mb-5">@(Model.Comments.Count) Comments</h3>
+                    <h3 class="mb-5">@(Model?.Comments?.Count ?? 0) Comments</h3>
                     <ul class="comment-list">
-                        @foreach (var comment in Model.Comments)
+                        @if (Model?.Comments != null)
                         {
-                            <li class="comment">
-                                <div class="vcard bio">
-                                    <img src="images/person_1.jpg" alt="Image placeholder">
-                                </div>
-                                <div class="comment-body">
-                                    <h3>@comment.Author</h3>
-                                    <div class="meta">@comment.CreatedAt.ToString("dd,MM,yyyy")</div>
-                                    <p>@comment.Content</p>
-                                </div>
-                            </li>
+                            @foreach (var comment in Model.Comments)
+                            {
+                                <li class="comment">
+                                    <div class="vcard bio">
+                                        <img src="@Url.Action("GetImage", "Home", new { fileUrl = comment.UserImageUrl })" alt="Image placeholder">
+                                    </div>
+                                    <div class="comment-body">
+                                        <h3>@comment.Author</h3>
+                                        <div class="meta">@comment.CreatedAt.ToString("dd,MM,yyyy")</div>
+                                        <p>@comment.Content</p>
+                                    </div>
+                                </li>
+                            }
                         }
                     </ul>
+
 
                     <!-- END comment-list -->
 
@@ -64,5 +68,5 @@
             <vc:blog-posts view-name="RecentBlog" />
         </div>
     </div>
-</section> 
+</section>
 <!-- .section -->
