Fixed/ _Layout view fixed js and css href. Feat/ App.Admin Contorollers implemented authorize.

--- a/App.Client/Views/Home/Index.cshtml
+++ b/App.Client/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿
 <section id="home-section" class="hero">
-    <vc:about-me use-hero-view="true" />
+    <vc:about-me view-name="Hero" />
 </section>
 
 <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
-    <vc:about-me use-hero-view="false" />
+    <vc:about-me view-name="AboutMe" />
 </section>
 
 <section class="ftco-section" id="education-section">
