--- a/App.Client/Views/Shared/Components/BlogPosts/Main.cshtml
+++ b/App.Client/Views/Shared/Components/BlogPosts/Main.cshtml
@@ -26,7 +26,7 @@
                         <div class="d-flex align-items-center mb-3 meta">
                             <p class="mb-0">
                                 <span class="mr-2">@post.CreatedAt.ToString("MMMM dd, yyyy")</span>
-                                <a class="mr-2">Admin</a>
+                                <a class="mr-2">@post.Author</a>
                                 <a class="meta-chat"><span class="icon-chat"></span> @post.Comments.Count</a>
                             </p>
                         </div>
