--- a/App.Client/Views/Shared/_Layout.cshtml
+++ b/App.Client/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @RenderBody()
 
     <footer class="ftco-footer ftco-section">
-        <partial name="Partials/_Footer.cshtml" />
+        <vc:about-me view-name="Footer" />
     </footer>
 
     <partial name="Partials/_Loader.cshtml" />
