--- a/App.Client/Views/Home/BlogPost.cshtml
+++ b/App.Client/Views/Home/BlogPost.cshtml
@@ -1,12 +1,11 @@
 ﻿@model BlogPostViewModel
 
-<section class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap js-fullheight" style="background-image: url('/images/bg_1.jpg');" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
             <div class="col-md-12 ftco-animate pb-5 mb-3 text-center">
                 <h1 class="mb-3 bread">Blog Single Post</h1>
-                <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index" asp-controller="Home">Home <i class="ion-ios-arrow-forward"></i></a></span>
             </div>
         </div>
     </div>
@@ -17,12 +16,13 @@
         <div class="row">
             <div class="col-lg-8 ftco-animate">
                 <h2 class="mb-3">@Model.Title</h2>
+                <p>@Model.Content</p>
                 <p>
                     <img src="@Url.Action("GetImage", "Home", new { fileUrl = Model.ImageUrl })" alt="Blog Photo" class="img-fluid">
                 </p>
                 <p>@Model.Content</p>
                 <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
-                <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
+                <p>@Model.Content</p>
 
                 <div class="pt-5 mt-5">
                     <h3 class="mb-5">@(Model?.Comments?.Count ?? 0) Comments</h3>
@@ -50,7 +50,7 @@
 
                     <div class="comment-form-wrap pt-5">
                         <h3 class="mb-5">Leave a comment</h3>
-                        <form asp-action="SubmitComment" asp-controller="Blog" method="post" class="p-5 bg-dark">
+                        <form asp-action="SubmitComment" asp-controller="Home" method="post" class="p-5 bg-dark">
                             <input type="hidden" name="PostId" value="@Model.Id" />
                             <div class="form-group">
                                 <label for="message">Message</label>
