--- a/App.Admin/Views/Education/Edit.cshtml
+++ b/App.Admin/Views/Education/Edit.cshtml
@@ -40,9 +40,10 @@
                 <input asp-for="EndDate" type="date" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
-
+            <div class="mb-3">
             <button type="submit" class="btn btn-primary">Edit</button>
             <a asp-action="Educations" class="btn btn-secondary">Back to List</a>
+            </div>
         </form>
     </div>
 </div>
