--- a/App.Admin/Views/BlogPost/CreateBlogPost.cshtml
+++ b/App.Admin/Views/BlogPost/CreateBlogPost.cshtml
@@ -8,7 +8,7 @@
 <div class="container my-3">
     <div class="row">
     <h2>Create Blog Post</h2>
-    <form asp-action="Create" method="post" enctype="multipart/form-data">
+        <form asp-action="CreateBlogPost" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label asp-for="Title" class="control-label"></label>
             <input asp-for="Title" class="form-control" />
