--- a/App.Admin/Views/BlogPost/CreateComment.cshtml
+++ b/App.Admin/Views/BlogPost/CreateComment.cshtml
@@ -9,7 +9,6 @@
     <div class="row">
         <div class="col-md-12">
             <h2>Create Comment</h2>
-            <partial name="Partials/ViewMessages" />
             <form asp-action="CreateComment" method="post" asp-route-postId="@ViewData["PostId"]">
                 @* <input type="hidden" asp-for="@ViewData["PostId"]" /> *@
 
@@ -19,7 +18,7 @@
                     <span asp-validation-for="Content" class="text-danger"></span>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-3">
                     <button type="submit" class="btn btn-primary">Create Comment</button>
                     <a asp-action="BlogPosts" class="btn btn-secondary">Back to List</a>
                 </div>
