--- a/App.Admin/Views/Comment/Comments.cshtml
+++ b/App.Admin/Views/Comment/Comments.cshtml
@@ -47,8 +47,8 @@
                             @if (comment.UserId.ToString() == currentUserId)
                             {
                                 <a asp-action="Edit" asp-route-id="@comment.Id">Edit |</a>
-                            } 
-                            <a asp-action="Delete" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
+                            }
+                            <a asp-action="DeleteComment" asp-controller="Comment" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
                         </td>
                     </tr>
                 }
@@ -88,7 +88,7 @@
                                 <a asp-action="Edit" asp-route-id="@comment.Id">Edit |</a>
                             }
                             <a asp-action="Approve" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to approve this comment?');">Approve</a> |
-                            <a asp-action="Delete" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
+                            <a asp-action="DeleteComment" asp-controller="Comment" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
                         </td>
                     </tr>
                 }
