--- a/App.Admin/Views/Experience/Edit.cshtml
+++ b/App.Admin/Views/Experience/Edit.cshtml
@@ -40,7 +40,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
-            <div>
+            <div class="my-3">
                 <input type="submit" value="Save Changes" class="btn btn-primary" />
                 <a asp-action="Experiences" class="btn btn-secondary">Back to List</a>
             </div>
