--- a/App.Admin/Views/Project/Edit.cshtml
+++ b/App.Admin/Views/Project/Edit.cshtml
@@ -10,7 +10,7 @@
     <div class="row">
         <h2>Edit Project</h2>
 
-        <form asp-action="Edit" method="post">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -28,9 +28,10 @@
                 <input asp-for="Image" type="file" class="form-control-file" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
-
+            <div class="mb-3">
             <button type="submit" class="btn btn-primary">Save Changes</button>
             <a asp-action="Projects" class="btn btn-secondary">Cancel</a>
+            </div>
         </form>
     </div>
 </div>
