feat: User profile information layout adjusted feat: Images displayed in App.Admin panel

--- a/App.Client/Views/Shared/Partials/_Navbar.cshtml
+++ b/App.Client/Views/Shared/Partials/_Navbar.cshtml
@@ -20,7 +20,7 @@
                             Account
                         </a>
                         <div class="dropdown-menu" aria-labelledby="userDropdown">
-                            <a class="dropdown-item" asp-controller="Auth" asp-action="Details">Profile</a>
+                            <a class="dropdown-item" asp-controller="User" asp-action="Details">Profile</a>
                             <a class="dropdown-item" asp-controller="Auth" asp-action="Logout">Logout</a>
                         </div>
                     </li>
