--- a/App.Admin/Views/BlogPost/BlogPosts.cshtml
+++ b/App.Admin/Views/BlogPost/BlogPosts.cshtml
@@ -29,7 +29,7 @@
                             <td>
                                 @if (!string.IsNullOrEmpty(post.ImageUrl))
                                 {
-                                    <img src="@post.ImageUrl" alt="Blog Post Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
+                                    <img src="@Url.Action("GetImage", "BlogPost", new { fileUrl = post.ImageUrl })" alt="Project Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
                                 }
                                 else
                                 {
