--- a/App.Admin/Views/Comment/Comments.cshtml
+++ b/App.Admin/Views/Comment/Comments.cshtml
@@ -34,7 +34,7 @@
                         <td>
                             @if (!string.IsNullOrEmpty(comment.UserImageUrl))
                             {
-                                <img src="@comment.UserImageUrl" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
+                                <img src="@Url.Action("GetImage", "Comment", new { fileUrl = comment.UserImageUrl })" alt="Project Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
                             }
                             else
                             {
@@ -73,7 +73,7 @@
                         <td>
                             @if (!string.IsNullOrEmpty(comment.UserImageUrl))
                             {
-                                <img src="@comment.UserImageUrl" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
+                                <img src="@Url.Action("GetImage", "Comment", new { fileUrl = comment.UserImageUrl })" alt="Project Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
                             }
                             else
                             {
