--- a/App.Client/Views/Auth/Register.cshtml
+++ b/App.Client/Views/Auth/Register.cshtml
@@ -11,6 +11,11 @@
                 <h2 class="text-center">Register</h2>
                 <form asp-action="Register" method="post">
                     <div class="form-group">
+                        <label asp-for="UserName"></label>
+                        <input asp-for="UserName" class="form-control" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
                         <label asp-for="Email"></label>
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
