--- a/App.Client/Views/User/Details.cshtml
+++ b/App.Client/Views/User/Details.cshtml
@@ -10,21 +10,27 @@
         <div class="row justify-content-center">
             <div class="col-md-6 text-center">
                 <h2>Profile</h2>
-                <div class="form-group">
+                <div class="form-group mb-4">
                     <img src="@(string.IsNullOrEmpty(Model.ProfilePhotoUrl) ? "https://freesvg.org/img/abstract-user-flat-4.png": Url.Action("GetImage", "Home", new { fileUrl = Model.ProfilePhotoUrl }))"
                          alt="Profile Picture" class="img-thumbnail" style="width: 150px; height: 150px;">
                 </div>
-                <div class="form-group">
-                    <label>Email:</label>
-                    <p>@Model.Email</p>
+                <div class="mt-3">
+                    <div class="d-flex justify-content-center">
+                        <p class="font-weight-bold mr-2">Username:</p>
+                        <p>@Model.UserName</p>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <p class="font-weight-bold mr-2">Email:</p>
+                        <p>@Model.Email</p>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label>Username:</label>
-                    <p>@Model.UserName</p>
+                <div class="mt-3">
+                    <a asp-action="Edit" class="btn btn-primary">Edit Profile</a>
+                    <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this profile?');">Delete</a>
                 </div>
-                <a asp-action="Edit" class="btn btn-primary">Edit Profile</a> |
-                <a asp-action="Delete" asp-route-id="@Model.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
             </div>
         </div>
     </div>
 </section>
+
+
