--- a/App.Admin/Views/AboutMe/Index.cshtml
+++ b/App.Admin/Views/AboutMe/Index.cshtml
@@ -36,7 +36,7 @@
                 <td>
                     @if (!string.IsNullOrEmpty(Model.ImageUrl1))
                     {
-                        <img src="@Url.Action("GetImage", "AboutMe", new { fileUrl = Model.ImageUrl1 })" alt="Project Photo" style="width: 100px; height: 125px; border-radius: 100%;" />
+                        <img src="@Url.Action("GetImage", "Base", new { fileUrl = Model.ImageUrl1 })" alt="Project Photo" style="width: 100px; height: 125px; border-radius: 100%;" />
                     }
                     else
                     {
@@ -49,7 +49,7 @@
                 <td>
                     @if (!string.IsNullOrEmpty(Model.ImageUrl2))
                     {
-                        <img src="@Url.Action("GetImage", "AboutMe", new { fileUrl = Model.ImageUrl2 })" alt="Project Photo" style="width: 100px; height: 100px; border-radius: 100%;" />
+                        <img src="@Url.Action("GetImage", "Base", new { fileUrl = Model.ImageUrl2 })" alt="Project Photo" style="width: 100px; height: 100px; border-radius: 100%;" />
                     }
                     else
                     {
