--- a/App.Admin/Views/Comment/Comments.cshtml
+++ b/App.Admin/Views/Comment/Comments.cshtml
@@ -32,14 +32,9 @@
                 {
                     <tr>
                         <td>
-                            @if (!string.IsNullOrEmpty(comment.UserImageUrl))
-                            {
-                                <img src="@Url.Action("GetImage", "Comment", new { fileUrl = comment.UserImageUrl })" alt="Project Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
-                            }
-                            else
-                            {
-                                <img src="~/image/user-anon.png" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
-                            }
+                            <img src="@(string.IsNullOrEmpty(comment.UserImageUrl) ? Url.Content("~/image/user-anon.png") : Url.Action("GetImage", "Base", new { fileUrl = comment.UserImageUrl }))"
+                                 alt="BlogPost Photo"
+                                 style="width: 50px; height: 50px; border-radius: 50%;" />
                             @comment.Author
                         </td>
                         <td>@comment.Content</td>
@@ -71,14 +66,9 @@
                 {
                     <tr>
                         <td>
-                            @if (!string.IsNullOrEmpty(comment.UserImageUrl))
-                            {
-                                <img src="@Url.Action("GetImage", "Comment", new { fileUrl = comment.UserImageUrl })" alt="Project Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
-                            }
-                            else
-                            {
-                                <img src="~/image/user-anon.png" alt="Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
-                            }
+                            <img src="@(string.IsNullOrEmpty(comment.UserImageUrl) ? Url.Content("~/image/user-anon.png") : Url.Action("GetImage", "Base", new { fileUrl = comment.UserImageUrl }))"
+                                 alt="BlogPost Photo"
+                                 style="width: 50px; height: 50px; border-radius: 50%;" />
                             @comment.Author
                         </td>
                         <td>@comment.Content</td>
