--- a/App.Admin/Views/Comment/PostComment.cshtml
+++ b/App.Admin/Views/Comment/PostComment.cshtml
@@ -24,10 +24,9 @@
                     <div class="card mb-3">
                         <div class="card-body d-flex">
                             <div class="user-image me-3">
-                                <img src="@(string.IsNullOrEmpty(comment.UserImageUrl) ? Url.Content("~/image/user-anon.png") : comment.UserImageUrl)"
-                                     alt="User Photo"
-                                     class="rounded-circle"
-                                     style="width: 50px; height: 50px;" />
+                                <img src="@(string.IsNullOrEmpty(comment.UserImageUrl) ? Url.Content("~/image/user-anon.png") : Url.Action("GetImage", "Base", new { fileUrl = comment.UserImageUrl }))"
+                                     alt="BlogPost Photo"
+                                     style="width: 50px; height: 50px; border-radius: 50%;" />
                             </div>
                             <div>
                                 <h5 class="card-title">@comment.Author</h5>
@@ -46,10 +45,9 @@
                     <div class="card mb-3">
                         <div class="card-body d-flex">
                             <div class="user-image me-3">
-                                <img src="@(string.IsNullOrEmpty(comment.UserImageUrl) ? Url.Content("~/image/user-anon.png") : comment.UserImageUrl)"
-                                     alt="User Photo"
-                                     class="rounded-circle"
-                                     style="width: 50px; height: 50px;" />
+                                <img src="@(string.IsNullOrEmpty(comment.UserImageUrl) ? Url.Content("~/image/user-anon.png") : Url.Action("GetImage", "Base", new { fileUrl = comment.UserImageUrl }))"
+                                     alt="BlogPost Photo"
+                                     style="width: 50px; height: 50px; border-radius: 50%;" />
                             </div>
                             <div>
                                 <h5 class="card-title">@comment.Author</h5>
