--- a/App.Admin/Views/Project/Projects.cshtml
+++ b/App.Admin/Views/Project/Projects.cshtml
@@ -33,7 +33,7 @@
                         <tr>
                             <td>@project.Title</td>
                             <td>@project.Description</td>
-                            <td><img src="@Url.Action("GetImage", "Project", new { fileUrl = project.ImageUrl })" alt="Project Photo" style="width: 50px; height: 50px; border-radius: 50%;" /></td>
+                            <td><img src="@Url.Action("GetImage", "Base", new { fileUrl = project.ImageUrl })" alt="Project Photo" style="width: 50px; height: 50px; border-radius: 50%;" /></td>
                             <td>
                                 <a asp-action="Edit" asp-route-id="@project.Id">Edit</a> |
                                 <a asp-action="MakeInActive" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to inactive this experience?');">Make Inactive</a> |
@@ -62,7 +62,7 @@
                         <tr>
                             <td>@project.Title</td>
                             <td>@project.Description</td>
-                            <td>@project.ImageUrl</td>
+                            <td><img src="@Url.Action("GetImage", "Base", new { fileUrl = project.ImageUrl })" alt="Project Photo" style="width: 50px; height: 50px; border-radius: 50%;" /></td>
                             <td>
                                 <a asp-action="Edit" asp-route-id="@project.Id">Edit</a> |
                                 <a asp-action="MakeActive" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to active this experience?');">Make Active</a> |
