--- a/App.Client/Views/Shared/Partials/_Loader.cshtml
+++ b/App.Client/Views/Shared/Partials/_Loader.cshtml
@@ -16,3 +16,4 @@
 <script src="~/js/scrollax.min.js"></script>
 
 <script src="~/js/main.js"></script>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
